plugins {
    id 'java'
    id 'org.jetbrains.intellij' version '1.13.2'
}

group 'com.by122006.zircon'
version '3.6'

compileJava {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
buildPlugin {
    buildSearchableOptions.enabled = false
}

repositories {
    maven {
        url uri('../../repo')
    }
    maven { url 'https://jitpack.io' }
    maven { url 'https://maven.aliyun.com/repository/public/' }
    mavenCentral()
}
patchPluginXml{
    sinceBuild="203.*"
    untilBuild="233.*"
}
dependencies {
    annotationProcessor 'com.github.122006.zircon:javac:3.2.1'
    implementation 'com.github.122006.zircon:zircon:3.2.1'
    implementation 'com.github.122006.zircon:base:3.2.1'
    implementation 'com.github.122006:ExMethodUtil:1.1.1'
}
//IU-202.7319.50
intellij  {
    plugins = ['java']
    version = "2023.3"
    type = "IC"
}
tasks.withType(JavaCompile) {
    it.options.compilerArgs << "-Xplugin:ZrExMethod"
    it.options.compilerArgs << "-Xplugin:ZrString"
    it.options.fork = true
    if (Integer.parseInt(System.getProperty("java.version").split("\\.")[0]) >= 11) {
        it.options.forkOptions.jvmArgs
                << "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
                << "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
                << "--add-exports=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.code.Types=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.code.Names=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.code.Symtab=ALL-UNNAMED"
                << "--add-opens=jdk.compiler/com.sun.tools.javac.processing.JavacProcessingEnvironment=ALL-UNNAMED"
        it.options.fork = true
    }
}

